[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/Player1/malePerson_frame.png" type="Texture" id=1]
[ext_resource path="res://UI/fonts/Montserrat-ExtraBold.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://UI/PlayerJoinScreen.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 48
font_data = ExtResource( 2 )

[node name="PlayerJoinScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player1Container" type="PanelContainer" parent="GridContainer"]
margin_right = 510.0
margin_bottom = 298.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="GridContainer/Player1Container"]
margin_left = 7.0
margin_top = 119.0
margin_right = 503.0
margin_bottom = 179.0
custom_fonts/font = SubResource( 1 )
text = "Press Start to join"
align = 1

[node name="TextureRect" type="TextureRect" parent="GridContainer/Player1Container"]
visible = false
margin_left = 7.0
margin_top = 7.0
margin_right = 503.0
margin_bottom = 291.0
texture = ExtResource( 1 )
stretch_mode = 4

[node name="Player2Container" type="PanelContainer" parent="GridContainer"]
margin_left = 514.0
margin_right = 1024.0
margin_bottom = 298.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="GridContainer/Player2Container"]
margin_left = 7.0
margin_top = 119.0
margin_right = 503.0
margin_bottom = 179.0
custom_fonts/font = SubResource( 1 )
text = "Press Start to join"
align = 1

[node name="TextureRect" type="TextureRect" parent="GridContainer/Player2Container"]
visible = false
margin_left = 7.0
margin_top = 7.0
margin_right = 503.0
margin_bottom = 291.0
texture = ExtResource( 1 )
stretch_mode = 4

[node name="Player3Container" type="PanelContainer" parent="GridContainer"]
margin_top = 302.0
margin_right = 510.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="GridContainer/Player3Container"]
margin_left = 7.0
margin_top = 119.0
margin_right = 503.0
margin_bottom = 179.0
custom_fonts/font = SubResource( 1 )
text = "Press Start to join"
align = 1

[node name="TextureRect" type="TextureRect" parent="GridContainer/Player3Container"]
visible = false
margin_left = 7.0
margin_top = 7.0
margin_right = 503.0
margin_bottom = 291.0
texture = ExtResource( 1 )
stretch_mode = 4

[node name="Player4Container" type="PanelContainer" parent="GridContainer"]
margin_left = 514.0
margin_top = 302.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="GridContainer/Player4Container"]
margin_left = 7.0
margin_top = 119.0
margin_right = 503.0
margin_bottom = 179.0
custom_fonts/font = SubResource( 1 )
text = "Press Start to join"
align = 1

[node name="TextureRect" type="TextureRect" parent="GridContainer/Player4Container"]
visible = false
margin_left = 7.0
margin_top = 7.0
margin_right = 503.0
margin_bottom = 291.0
texture = ExtResource( 1 )
stretch_mode = 4
